[package]
name = "hyper-across-tokio-runtime-hang"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = "0.7"
futures = "0.3.31"
once_cell = "1.21.3"
reqwest = "0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
